@@ -2,12 +2,37 @@
 Deploying Presto
 ================
 
+Requirements
+------------
+
+Linux Operating System
+^^^^^^^^^^^^^^^^^^^^^^
+
+* 64-bit required
+* newer release preferred, especially when running on containers
+
+.. _requirements-java:
+
+Java Runtime Environment
+^^^^^^^^^^^^^^^^^^^^^^^^
+
+* 64-bit required
+* version 11 recommended (lower versions not supported, higher versions less
+  tested)
+* Azul Zulu recommended (most tested)
+
+Python
+^^^^^^
+
+* version 2.6.x, 2.7.x, or 3.x
+* required by the ``bin/launcher`` script only
+
 Installing Presto
 -----------------
 
 Download the Presto server tarball, :maven_download:`server`, and unpack it.
-The tarball will contain a single top-level directory,
-|presto_server_release|, which we will call the *installation* directory.
+The tarball contains a single top-level directory,
+|presto_server_release|, which we call the *installation* directory.
 
 Presto needs a *data* directory for storing logs, etc.
 We recommend creating a data directory outside of the installation directory,
@@ -17,7 +42,7 @@ Configuring Presto
 ------------------
 
 Create an ``etc`` directory inside the installation directory.
-This will hold the following configuration:
+This holds the following configuration:
 
 * Node Properties: environmental configuration specific to each node
 * JVM Config: command line options for the Java Virtual Machine
@@ -43,18 +68,21 @@ Presto is first installed. The following is a minimal ``etc/node.properties``:
 The above properties are described below:
 
 * ``node.environment``:
-  The name of the environment. All Presto nodes in a cluster must
-  have the same environment name.
+  The name of the environment. All Presto nodes in a cluster must have the same
+  environment name. The name must start with an alphanumeric character and
+  only contain alphanumeric, ``-``, or ``_`` characters.
 
 * ``node.id``:
   The unique identifier for this installation of Presto. This must be
   unique for every node. This identifier should remain consistent across
   reboots or upgrades of Presto. If running multiple installations of
   Presto on a single machine (i.e. multiple nodes on the same machine),
-  each installation must have a unique identifier.
+  each installation must have a unique identifier. The identifier must start
+  with an alphanumeric character and only contain alphanumeric, ``-``, or ``_``
+  characters.
 
 * ``node.data-dir``:
-  The location (filesystem path) of the data directory. Presto will store
+  The location (filesystem path) of the data directory. Presto stores
   logs and other data here.
 
 .. _presto_jvm_config:
@@ -74,17 +102,28 @@ The following provides a good starting point for creating ``etc/jvm.config``:
 
     -server
     -Xmx16G
+    -XX:-UseBiasedLocking
     -XX:+UseG1GC
     -XX:G1HeapRegionSize=32M
-    -XX:+UseGCOverheadLimit
     -XX:+ExplicitGCInvokesConcurrent
-    -XX:+HeapDumpOnOutOfMemoryError
     -XX:+ExitOnOutOfMemoryError
+    -XX:+HeapDumpOnOutOfMemoryError
+    -XX:ReservedCodeCacheSize=512M
+    -XX:PerMethodRecompilationCutoff=10000
+    -XX:PerBytecodeRecompilationCutoff=10000
+    -Djdk.attach.allowAttachSelf=true
+    -Djdk.nio.maxCachedBufferSize=2000000
 
-Because an ``OutOfMemoryError`` will typically leave the JVM in an
-inconsistent state, we write a heap dump (for debugging) and forcibly
+Because an ``OutOfMemoryError`` typically leaves the JVM in an
+inconsistent state, we write a heap dump, for debugging, and forcibly
 terminate the process when this occurs.
 
+The temporary directory used by the JVM must allow execution of code.
+Specifically, the mount must not have the ``noexec`` flag set. The default
+``/tmp`` directory is mounted with this flag in some installations, which
+prevents Presto from starting. You can workaround this by overriding the
+temporary directory by adding ``-Djava.io.tmpdir=/path/to/other/tmpdir`` to the
+list of JVM options.
 
 .. _config_properties:
 
@@ -121,8 +160,8 @@ And this is a minimal configuration for the workers:
     query.max-total-memory-per-node=2GB
     discovery.uri=http://example.net:8080
 
-Alternatively, if you are setting up a single machine for testing that
-will function as both a coordinator and worker, use this configuration:
+Alternatively, if you are setting up a single machine for testing, that
+functions as both a coordinator and worker, use this configuration:
 
 .. code-block:: none
 
@@ -138,8 +177,8 @@ will function as both a coordinator and worker, use this configuration:
 These properties require some explanation:
 
 * ``coordinator``:
-  Allow this Presto instance to function as a coordinator
-  (accept queries from clients and manage query execution).
+  Allow this Presto instance to function as a coordinator, so to
+  accept queries from clients and manage query execution.
 
 * ``node-scheduler.include-coordinator``:
   Allow scheduling work on the coordinator.
@@ -153,18 +192,18 @@ These properties require some explanation:
   communication, internal and external.
 
 * ``query.max-memory``:
-  The maximum amount of distributed memory that a query may use.
+  The maximum amount of distributed memory, that a query may use.
 
 * ``query.max-memory-per-node``:
-  The maximum amount of user memory that a query may use on any one machine.
+  The maximum amount of user memory, that a query may use on any one machine.
 
 * ``query.max-total-memory-per-node``:
-  The maximum amount of user and system memory that a query may use on any one machine,
+  The maximum amount of user and system memory, that a query may use on any one machine,
   where system memory is the memory used during execution by readers, writers, and network buffers, etc.
 
 * ``discovery-server.enabled``:
   Presto uses the Discovery service to find all the nodes in the cluster.
-  Every Presto instance will register itself with the Discovery service
+  Every Presto instance registers itself with the Discovery service
   on startup. In order to simplify deployment and avoid running an additional
   service, the Presto coordinator can run an embedded version of the
   Discovery service. It shares the HTTP server with Presto and thus uses
@@ -177,16 +216,9 @@ These properties require some explanation:
   the host and port of the Presto coordinator. This URI must not end
   in a slash.
 
-You may also wish to set the following properties:
-
-* ``jmx.rmiregistry.port``:
-  Specifies the port for the JMX RMI registry. JMX clients should connect to this port.
-
-* ``jmx.rmiserver.port``:
-  Specifies the port for the JMX RMI server. Presto exports many metrics
-  that are useful for monitoring via JMX.
-
-See also :doc:`/admin/resource-groups`.
+The above configuration properties are a minimal set to help you get started.
+Please see :doc:`/admin` and :doc:`/security` for a more comprehensive list.
+In particular, see :doc:`/admin/resource-groups` for configuring queuing policies.
 
 Log Levels
 ^^^^^^^^^^
@@ -194,7 +226,7 @@ Log Levels
 The optional log levels file, ``etc/log.properties``, allows setting the
 minimum log level for named logger hierarchies. Every logger has a name,
 which is typically the fully qualified name of the class that uses the logger.
-Loggers have a hierarchy based on the dots in the name (like Java packages).
+Loggers have a hierarchy based on the dots in the name, like Java packages.
 For example, consider the following log levels file:
 
 .. code-block:: none
@@ -203,8 +235,8 @@ For example, consider the following log levels file:
 
 This would set the minimum level to ``INFO`` for both
 ``io.prestosql.server`` and ``io.prestosql.plugin.hive``.
-The default minimum level is ``INFO``
-(thus the above example does not actually change anything).
+The default minimum level is ``INFO``,
+thus the above example does not actually change anything.
 There are four levels: ``DEBUG``, ``INFO``, ``WARN`` and ``ERROR``.
 
 Catalog Properties
@@ -212,9 +244,9 @@ Catalog Properties
 
 Presto accesses data via *connectors*, which are mounted in catalogs.
 The connector provides all of the schemas and tables inside of the catalog.
-For example, the Hive connector maps each Hive database to a schema,
-so if the Hive connector is mounted as the ``hive`` catalog, and Hive
-contains a table ``clicks`` in database ``web``, that table would be accessed
+For example, the Hive connector maps each Hive database to a schema.
+If the Hive connector is mounted as the ``hive`` catalog, and Hive
+contains a table ``clicks`` in database ``web``, that table can be accessed
 in Presto as ``hive.web.clicks``.
 
 Catalogs are registered by creating a catalog properties file
@@ -241,8 +273,8 @@ Presto can be started as a daemon by running the following:
     bin/launcher start
 
 Alternatively, it can be run in the foreground, with the logs and other
-output being written to stdout/stderr (both streams should be captured
-if using a supervision system like daemontools):
+output written to stdout/stderr. Both streams should be captured
+if using a supervision system like daemontools:
 
 .. code-block:: none
 
@@ -252,16 +284,26 @@ Run the launcher with ``--help`` to see the supported commands and
 command line options. In particular, the ``--verbose`` option is
 very useful for debugging the installation.
 
-After launching, you can find the log files in ``var/log``:
+The launcher configures default values for the configuration
+directory ``etc``, configuration files, the data directory ``var``,
+and log files in the data directory. You can change these values
+to adjust your Presto usage to any requirements, such as using a
+directory outside the installation directory, specific mount points
+or locations, and even using other file names. For example, the Presto
+RPM adjusts the used directories to better follow the Linux Filesystem
+Hierarchy Standard (FHS).
+
+After starting Presto, you can find log files in the ``log`` directory inside
+the data directory ``var``:
 
 * ``launcher.log``:
   This log is created by the launcher and is connected to the stdout
-  and stderr streams of the server. It will contain a few log messages
-  that occur while the server logging is being initialized and any
+  and stderr streams of the server. It contains a few log messages
+  that occur while the server logging is being initialized, and any
   errors or diagnostics produced by the JVM.
 
 * ``server.log``:
-  This is the main log file used by Presto. It will typically contain
+  This is the main log file used by Presto. It typically contains
   the relevant information if the server fails during initialization.
   It is automatically rotated and compressed.
 
